--- a/lab7.html
+++ b/lab7.html
@@ -167,6 +167,8 @@
                                   needed to generate my noise matrices. 
                             </p>
                               <img src="assets/img/kf_noise_matrices.png" alt="Noise Covariance" width=40% height=auto/>
+                              <p class="card-text">(Correction: The second matrix should be Σ<sub>z</sub>, not Σ<sub>u</sub>. Sorry about that!) 
+                            </p>
                           </div>
                         </div>
                     <div class="list-group">
