--- a/lab7.html
+++ b/lab7.html
@@ -202,6 +202,30 @@
                            </p>
                         <br>
                     
+                         <div class="list-group">
+                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                            <div class="d-flex w-100 justify-content-between">
+                              <h5 class="mb-1">Implement the Kalman filter on the Robot!</h5>
+                            </div>
+                            <p> 
+                                After verifying that the parameters chosen for the Kalman filter are effective, I simply transfered the Kalman filter logic from 
+                                Python to Arduino code on the Artemis board so that it can perform PID using real-time Kalman filtered data. In my code, which is
+                                inspired by <a href="https://anyafp.github.io/ece4960/labs/lab7/">Anya's</a> code, 
+                                I used the BasicLinearAlgebra Arduino library to help with matrix operations. 
+                            </p>
+                              <script src="https://gist.github.com/tiffanyguo8/dd4e8eca48aa9cecf29e37f7487676d2.js"></script>
+                              <p>
+                                Here is a video demo of my robot running PID control using the Kalman filter data:
+                              </p>
+                               <iframe width="560" height="315" src="https://www.youtube.com/embed/VnqafEW0-fo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                              <p>
+                                I found that the parameters used earlier in my Python code worked well for my robot, and playing around with the σ values 
+                                  either caused the motors to move unexpectedly/stall or caused the filtered data to be too close to the raw data. Thus, I stuck
+                                  with the parameters I calculated earlier, and the following graphs depict the system working with PID and Kalman filtered data.
+                              </p>
+                            </a>
+                        </div>
+                        
                         <div class="d-grid gap-2">
                            <a class="btn btn-lg btn-primary" href="index.html">Home</a>
                         </div>
