--- a/lab7.html
+++ b/lab7.html
@@ -213,19 +213,22 @@
                                 inspired by <a href="https://anyafp.github.io/ece4960/labs/lab7/">Anya's</a> code, 
                                 I used the BasicLinearAlgebra Arduino library to help with matrix operations. 
                             </p>
+                          </a>
+                        </div><br>
                               <script src="https://gist.github.com/tiffanyguo8/dd4e8eca48aa9cecf29e37f7487676d2.js"></script>
-                              <p>
+                              <p><br>
                                 Here is a video demo of my robot running PID control using the Kalman filter data:
                               </p>
+                        <br><br>
                                <iframe width="560" height="315" src="https://www.youtube.com/embed/VnqafEW0-fo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                              <p>
+                        <br><br>      
+                        <p>
                                 I found that the parameters used earlier in my Python code worked well for my robot, and playing around with the σ values 
                                   either caused the motors to move unexpectedly/stall or caused the filtered data to be too close to the raw data. Thus, I stuck
                                   with the parameters I calculated earlier, and the following graphs depict the system working with PID and Kalman filtered data.
                               </p>
-                            </a>
-                        </div>
-                        
+                        <br>
+                            <img src="assets/img/Kalman_filter_implemented.png" alt="Kalman filter" width=70% height=auto/>
                         <div class="d-grid gap-2">
                            <a class="btn btn-lg btn-primary" href="index.html">Home</a>
                         </div>
