--- a/lab7.html
+++ b/lab7.html
@@ -209,11 +209,13 @@
                             </div>
                             <p> 
                                 After verifying that the parameters chosen for the Kalman filter are effective, I simply transfered the Kalman filter logic from 
-                                Python to Arduino code on the Artemis board so that it can perform PID using real-time Kalman filtered data. In my code, which is
-                                inspired by <a href="https://anyafp.github.io/ece4960/labs/lab7/">Anya's</a> code, I used the BasicLinearAlgebra Arduino library to help with matrix operations. 
+                                Python to Arduino code on the Artemis board so that it can perform PID using real-time Kalman filtered data. 
                             </p>
                           </a>
                         </div><br>
+                        In my code, which is inspired by <a href="https://anyafp.github.io/ece4960/labs/lab7/">Anya's</a> code, 
+                        I used the BasicLinearAlgebra Arduino library to help with matrix operations. 
+                        <br>
                               <script src="https://gist.github.com/tiffanyguo8/dd4e8eca48aa9cecf29e37f7487676d2.js"></script>
                               <p><br>
                                 Here is a video demo of my robot running PID control using the Kalman filter data:
@@ -228,7 +230,7 @@
                               </p>
                         
                             <img src="assets/img/Kalman_filter_implemented.png" alt="Kalman filter" width=70% height=auto/>
-                        <br>
+                        <br><br>
                         <div class="d-grid gap-2">
                            <a class="btn btn-lg btn-primary" href="index.html">Home</a>
                         </div>
