--- a/lab8.html
+++ b/lab8.html
@@ -70,10 +70,12 @@
                         
                         <p class="mb-1">This effectively helped both of the motors to switch direction simultaneously. Thanks to this adjustment,
                             the robot was able to perform a flip as it switched from driving forward to backward rapidly. Here are some videos
-                            of the robot successfully performing a stunt:
+                            of the robot successfully performing a stunt and the associated position and pwm graphs:
                             </p>        
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/Fzm8wWFD8nQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <br><br>
+                        <br><br>
+                        <img src="assets/img/kf_pos_final.png" alt="KF" width=70% height=auto/>
+                        <br><br>
                         <p class="mb-1">Here are some bloopers: 
                             </p>    
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/6ILWrTp42Cw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
