--- a/lab8.html
+++ b/lab8.html
@@ -74,7 +74,8 @@
                             </p>        
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/Fzm8wWFD8nQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <br><br>
-                        <img src="assets/img/kf_pos_final.png" alt="KF" width=70% height=auto/>
+                        <img src="assets/img/stunt_tof.png" alt="Position vs Time" width=45% height=auto/>
+                        <img src="assets/img/stunt_pwm.png" alt="PWM vs Time" width=45% height=auto/>
                         <br><br>
                         <p class="mb-1">Here are some bloopers: 
                             </p>    
