--- a/lab8.html
+++ b/lab8.html
@@ -72,8 +72,7 @@
                             the robot was able to perform a flip as it switched from driving forward to backward rapidly. Here are some videos
                             of the robot successfully performing a stunt and the associated position and pwm graphs:
                             </p>        
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Fzm8wWFD8nQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                        <br><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/HBhFwXMHP7w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                        <br><br>
                         <img src="assets/img/stunt_tof.png" alt="Position vs Time" width=45% height=auto/>
                         <img src="assets/img/stunt_pwm.png" alt="PWM vs Time" width=45% height=auto/>
                         <br><br>
