--- a/lab8.html
+++ b/lab8.html
@@ -76,6 +76,11 @@
                         <img src="assets/img/stunt_tof.png" alt="Position vs Time" width=49% height=auto/>
                         <img src="assets/img/stunt_pwm.png" alt="PWM vs Time" width=49% height=auto/>
                         <br><br>
+                        <p class="mb-1">The reason there is a 2 second gap in the data is that I used a delay to time when the robot should stop after
+                            performing the flip so that in case my robot goes rogue, it won't have that much time to become an occupational hazard. The data
+                            before the gap is from the sensor readings right up until the flip, and the data afterwards just shows that the robot is
+                            no longer facing the wall and is detecting whatever object is in its way. 
+                            </p><br><br>
                         <p class="mb-1">Here are some bloopers: 
                             </p>    
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/6ILWrTp42Cw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
