--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <a class="dropdown-item" href=lab6.html>Lab 6</a>
             <a class="dropdown-item" href=lab7.html>Lab 7</a>
             <a class="dropdown-item" href=lab8.html>Lab 8</a>
+            <a class="dropdown-item" href=lab9.html>Lab 9</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#about">About me</a>
           </div>
@@ -146,6 +147,11 @@
                     <div class="col-lg-4 col-sm-6">
                         <a class="nav-link" href="lab8.html"> 
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab8.jpg" alt="..." />
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="nav-link" href="lab9.html"> 
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab9.jpg" alt="..." />
                         </a>
                     </div>
                 </div>
