--- a/lab9.html
+++ b/lab9.html
@@ -74,7 +74,7 @@
                                 using PID control while taking ToF and IMU measurements. Below are the generated maps using polar coordinates and graphss of the raw ToF and IMU data for reference. 
                             </p>    
                         </a>    
-                            
+                        </div>       
                             <br><br>
                         <img src="assets/img/map03.png" alt="Map" width=49% height=auto/>
                         <img src="assets/img/imu03.png" alt="IMU" width=49% height=auto/>
