--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="mb-5">Documentation of labs for ECE 4160 at Cornell. <br>
-                        See my <a href="https://github.com/tiffanyguo8/ECE4160">Github repository</a> for code and resources. </p>
+                        See my <a href="https://github.com/tiffanyguo8/ECE4160-code">Github repository</a> for code and resources. </p>
                         <a class="btn btn-primary btn-xl" href="#portfolio">Go to labs</a>
                     </div>
                 </div>
